-*- coding: utf-8 -*-

2003-01-07 Rüdiger Kuhlmann <info@ruediger-kuhlmann.de>
	* fix configure test for FIFO (test with O_NOBLOCK as used in util_io.c)
	* fix file group length reported in file transfer request
	* fix a/r tab deny
	* fix compiler warnings on BSD
	* refrain v5-in-v8 message sending of wrong message types
	* use C.i18n instead of build.i18n
	* update *.i18n files, drop old strings, fix string formats
	* rename fun.i18n files to correct name
	* man page updates
	* fix mICQ logo in nocolor
	* fix usage string
	* use string number 1000 for encoding insteaf of 1007
	* add needs-updating-notes to all not updated man pages
	* fix setup passwd breakage
	* fix autofinger and make default on setup
	* implement simple history
	* fix Kopete/SIM detection
	**
	** Release 0.4.10
	**

2003-01-04 Rüdiger Kuhlmann <info@ruediger-kuhlmann.de>
	* expand extra parameters
	* deny tabs on r and a commands
	* compile-time configured LAN IP hiding
	* contact list download: also understand visible, invisible, ignored contacts
	* update online help and micq.7
	* fix embedded status in incoming messages related problems
	* update/move documentation for *.i18n files
	* print watching failures insetad of hex dump (SNAC (3,b))
	* delay login eg
	* make underlining a compile-time option defaulting off
	* some tiny fixes
	* rename silence to silent upon now3d's request
	* change mICQ logo again

2002-12-25 Rüdiger Kuhlmann <info@ruediger-kuhlmann.de>
	* add ukrainian man pages
	* add alias quit, exit for q; file for peer file
	* new command getauto to fetch auto messages, replaces peer auto|away|na|dnd|occ|ffc
	* streamline dc auto message fetching into normal message sending
	* Document quit,exit,file aliases
	* add getauto command
	* document remote control (FIFO), encoding/format options, new event handling, contact groups
	* add configure test for remote control FIFOs
	* redo iconv convifuger test to check for minimum set of available conversions
	* require newest autotools