@@ -615,7 +615,7 @@ with description
 .IR description .
 .TP
 .BI files \ [file\ as]...\ description
-Send files to the user. There may be arbitrarely many
+Send files to the user. There may be arbitrarily many
 pairs of a physical file name
 .I file
 and the name to be presented to the peer,
