@@ -19,7 +19,7 @@ is a text based ICQ client supporting many of the ICQ features provided by
 the client by Mirabillis. mICQ allows to change the user password, create
 new accounts, updating user info, search other users, send SMS, open direct
 connections, send acknowledged messages, transfer files, detect other user's
-client, send UTF-8 encoded messages, execute arbitrarely commands upon any
+client, send UTF-8 encoded messages, execute arbitrary commands upon any
 event, etc.
 .SH OPTIONS
 .TP
