@@ -142,7 +142,7 @@ Connect to socks 5 proxy listening on port
 .BI s5_auth \ number
 Set
 .I number
-to 0 to omit authentification and 1 to do authentification.
+to 0 to omit authentication and 1 to do authentication.
 .TP
 .BI s5_name \ name
 Identify as user
