@@ -718,9 +718,18 @@ void ContactSetCap (Contact *cont, Cap *cap)
         UBYTE ver;
         
         ver = cap->var[15];
-        cont->v1 = (ver >> 6) ? (ver >> 6) - 1 : 0;
-        cont->v2 = ver & 0x1f;
-        cont->v3 = cont->v4 = 0;
+        if (ver >> 6) /* SchlIMm */
+        {
+            cont->v1 = (ver >> 6) - 1;
+            cont->v2 = ver & 0x1f;
+            cont->v3 = cont->v4 = 0;
+        }
+        else /* KOtzPEKE */
+        {
+            cont->v1 = 0;
+            cont->v3 = ver & 0x1f;
+            cont->v2 = cont->v4 = 0;
+        }
     }
     else if (cap->id == CAP_MICQ && cap->var)
     {
@@ -842,7 +851,7 @@ void ContactSetVersion (Contact *cont)
         new = "licq";
     else if (HAS_CAP (cont->caps, CAP_SIM))
     {
-        if (cont->v1)
+        if (cont->v1 || cont->v2)
             new = "SIM";
         else
             new = "Kopete";
